package com.example.chess.modele;

public class ChessException extends RuntimeException
{
    public ChessException(String errorMessage) {
        super(errorMessage);
    }
}
