@startuml

title __CHESS's Class Diagram__\n

  namespace  {
    namespace om.example.chess {
      class com.example.chess.ChessApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Cavalier {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.ChessException {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        enum Couleur {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Echiquier {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Fou {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Pion {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Reine {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Roi {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace modele {
        class com.example.chess.modele.Tour {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace vues {
        class com.example.chess.vues.AccueilDialog {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace vues {
        class com.example.chess.vues.CaseView {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace vues {
        class com.example.chess.vues.EchiquierView {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace vues {
        class com.example.chess.vues.MainView {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.chess {
      namespace vues {
        class com.example.chess.vues.PieceView {
        }
      }
    }
  }
  

  com.example.chess.ChessApplication -up-|> javafx.application.Application
  com.example.chess.modele.Cavalier -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Echiquier .up.|> java.io.Serializable
  com.example.chess.modele.Echiquier .up.|> java.lang.Cloneable
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Couleur : playColor
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Couleur : robotColor
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Pion : selectedPiece
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Couleur : turnColor
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Roi : playerChief
  com.example.chess.modele.Echiquier o-- com.example.chess.modele.Roi : robotChief
  com.example.chess.modele.Fou -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Pion .up.|> java.io.Serializable
  com.example.chess.modele.Pion .up.|> java.lang.Cloneable
  com.example.chess.modele.Pion o-- com.example.chess.modele.Couleur : couleur
  com.example.chess.modele.Pion o-- com.example.chess.modele.Echiquier : echiquier
  com.example.chess.modele.Reine -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Roi -up-|> com.example.chess.modele.Pion
  com.example.chess.modele.Tour -up-|> com.example.chess.modele.Pion
  com.example.chess.vues.AccueilDialog -up-|> javafx.scene.control.Dialog
  com.example.chess.vues.CaseView -up-|> javafx.scene.shape.Rectangle
  com.example.chess.vues.EchiquierView -up-|> javafx.scene.layout.AnchorPane
  com.example.chess.vues.EchiquierView o-- com.example.chess.modele.Echiquier : echiquier
  com.example.chess.vues.PieceView -up-|> javafx.scene.image.ImageView
  com.example.chess.vues.PieceView o-- com.example.chess.modele.Pion : pion


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
